---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/recursive_combinator_inactive.bend
---
@Foo = (?((@Foo__C0 (a (* a))) b) b)

@Foo__C0 = {@Foo @Foo}

@main = a
  & @Foo ~ (0 a)
